--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "flag-icon",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "homepage": "https://github.com/stevenrskelton/flag-icon",
   "description": "Polymer Web Component for icons of flags",
   "main": "src/flag-icon.html",
@@ -26,6 +26,6 @@
     "flag"
   ],
   "dependencies": {
-    "polymer": "Polymer/polymer#~0.2.4"
+    "polymer": "Polymer/polymer#>=0.3.1"
   }
 }
