--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "flag-icon",
-  "version": "0.6.2",
+  "version": "0.7.0",
   "homepage": "https://github.com/stevenrskelton/flag-icon",
   "description": "Polymer Web Component for SVG and PNG icons of country, state, province and other flags",
   "main": "flag-icon.html",
@@ -28,9 +28,17 @@
     "icon",
     "svg",
     "flag",
-    "maritime"
+    "maritime",
+    "nascar",
+    "indycar",
+    "racing",
+    "canada",
+    "united states",
+    "germany",
+    "australia",
+    "spain"
   ],
   "dependencies": {
-    "polymer": "Polymer/polymer#>=0.3.4"
+    "polymer": "Polymer/polymer#>=0.4.0"
   }
 }
