--- a/bower.json
+++ b/bower.json
@@ -40,6 +40,6 @@
     "united states"
   ],
   "dependencies": {
-    "polymer": "Polymer/polymer#>=0.5.1"
+    "polymer": "Polymer/polymer#^0.5.5"
   }
 }
